add geocode data

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Careworks Density Map</title>
+    <title>2019 SEIU Bargaining Density Map</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="style.css">
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="header">
-      <p>Careworks Density Map</p>
+      <p>2019 SEIU Bargaining Density Map</p>
       <div class="legend__wrap">
         <div class="legend legend-1">1</div>
         <div class="legend legend-2">2</div>
