fixed color/size/circle data

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="header">
       <p>2019 SEIU Bargaining Density Map</p>
       <div class="legend__wrap">
-        <div class="legend legend-1">1</div>
-        <div class="legend legend-2">2</div>
-        <div class="legend legend-3">3</div>
+        <div class="legend legend-1">Care Provider</div>
+        <div class="legend legend-2">State Worker</div>
+        <div class="legend legend-3">Higher Ed Worker</div>
       </div>
     </div>
     <!--[if lte IE 9]>
